web/projects/em/src/_app-theme.scss
/* ... */
// replaces inetsoft-form-field-outline-typography which really should be handled by density
// inetsoft-form-field-outline-typography commented out below in case we really need such
// extra customization
.mat-mdc-form-field {
  @include mat.form-field-density(-5); // -5 is currently the smallest density
  // At density -5 the container height (36px) is below Angular Material's 52px threshold,
  // which causes --mat-form-field-filled-label-display to be set to none. Override to keep
  // floating labels visible in filled-appearance form fields.
  --mat-form-field-filled-label-display: block;

  &.mat-form-field-appearance-outline:not(.mat-mdc-paginator-page-size-select) {
    padding-bottom: .75em;
  }

  // prevents buttons from making the form field taller, matches density of form field
  @include mat.icon-button-density(-5);

  // align the icon in the center after decreasing its size above
  .mat-icon {
    display: flex;
    align-items: center;
    justify-content: center;
  }

  // https://github.com/angular/components/issues/26529
  // prevents icons from making the form field taller
  .mat-mdc-form-field-icon-prefix>.mat-icon, .mat-mdc-form-field-icon-suffix>.mat-icon {
    padding: 6px;
  }

  // the default padding on the right is 0 which looks awkward
  .mat-mdc-form-field-icon-suffix {
    padding-right: 12px;
  }

  .mat-mdc-text-field-wrapper:not(.mdc-text-field--outlined) .mat-mdc-form-field-infix {
    padding-bottom: 0px; // density causing this to be negative which is not valid
  }

  .mdc-text-field--filled {
    padding: 0;

    &:not(.mdc-text-field--disabled) {
      &, .mat-mdc-form-field-focus-overlay {
        background-color: transparent;
      }
    }
  }

  &.mat-form-field-appearance-fill {
    .mat-mdc-form-field-hint-wrapper, .mat-mdc-form-field-error-wrapper {
      padding: 0;
    }
  }

  .mat-mdc-form-field-bottom-align::before {
    height: 10px;
  }
}

mat-paginator.mat-mdc-paginator {
  .mdc-text-field--no-label:not(.mdc-text-field--outlined):not(.mdc-text-field--textarea) {
    .mat-mdc-form-field-infix {
      padding-bottom: 0px;
      min-height: 30px;
    }
  }
}

.mat-mdc-checkbox + .mat-form-field-appearance-outline {
  padding-top: 0.5em;
}

.mdc-floating-label {
  // to fix blurry float labels
  will-change: unset !important;
}

.mat-mdc-checkbox, .mat-mdc-radio-group {
  // to align with form fields
  margin-left: -10px;
}

@mixin em-app-typography($config) {
  @include editor-panel-typography($config);
  @include export-asset-dialog-typography($config);
  @include import-asset-dialog-typography($config);
  @include mat.icon-typography($config);
  @include multi-file-chooser-typography($config);
  @include repository-tree-view-typography($config);
  @include staged-file-chooser-typography($config);
  //@include inetsoft-form-field-outline-typography($config);
  @include summary-monitoring-chart-view-typography($config);
  @include expandable-row-table-typography($config);
  @include regular-table-typography($config);

  // use body-1 font size as the base for sidenav
  .mat-drawer {
    font-size: mat.m2-font-size($config, body-1);
  }

  // use same typography for dialogs as cards
  .mat-mdc-dialog-title {
    font: {
      size: mat.m2-font-size($config, headline-1);
      weight: mat.m2-font-weight($config, headline-1);
    }
  }

  .mat-mdc-dialog-content, .mat-tree-node {
    font-size: mat.m2-font-size($config, body-1);
  }

  .mat-mdc-button, .mat-mdc-raised-button, .mat-mdc-outlined-button, .mat-mdc-unelevated-button {
    padding: 0 16px;
  }

  .mat-mdc-card-title {
    font: {
      size: mat.m2-font-size($config, headline-1);
      weight: 500;
    }
  }

  .mat-expansion-panel-header {
    font-size: 15px;
    font-weight: 400;
  }
}

